--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -18,3 +18,5 @@ spl-token-2022 = { version = "0.9.0", features = ["no-entrypoint"] }
 solana-client = "<1.17.0"
 solana-sdk = "<1.17.0"
 anyhow = "1.0.53"
+bincode = "1.3.3"
+bs58 = { version = "0.4.0", features=["check"] }
