--- a/libraries/Cargo.toml
+++ b/libraries/Cargo.toml
@@ -13,8 +13,9 @@ raydium-amm-v3 = { git = "https://github.com/raydium-io/raydium-clmm", features 
 serum_dex = { version = "0.5.10", git = "https://github.com/raydium-io/openbook-dex", default-features = false, features = [
     "client",
 ] }
-raydium_amm = { git = "https://github.com/BTCLTC/raydium-amm", default-features = false, features = [
+raydium_amm = { git = "https://github.com/BTCLTC/raydium-amm", rev = "3e54f94f", default-features = false, features = [
     "client",
+    "devnet"
 ] }
 spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
 spl-associated-token-account = { version = "2.2.0", features = [
